Persona: Increased heights to account for double diacriticals and prevent textoverflow (#3806)
* Increased heights to account for double diacriticals and prevent text overflow

* Added change file

--- a/packages/office-ui-fabric-react/src/components/Persona/Persona.scss
+++ b/packages/office-ui-fabric-react/src/components/Persona/Persona.scss
@@ -360,12 +360,12 @@ $ms-Persona-presenceBorder: 2px;
   }
 
   &.showSecondaryText {
-    height: 32px;
+    height: 36px;
 
     .primaryText,
     .secondaryText {
       display: block;
-      height: 16px;
+      height: 18px;
       line-height: 16px;
       overflow-x: hidden;
     }
